[package]
name = "vaporstore"
version = "0.2.5"
edition = "2021"
description = "A minimal, fast, in-memory S3-compatible object storage"

[lib]
name = "vaporstore"
path = "src/lib.rs"

[[bin]]
name = "vaporstore"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
dashmap = "6.1.0"
bytes = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v7"] }
http = "1"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "normalize-path", "compression-full"] }
async-trait = "0.1.89"
tower_governor = "0.6"
governor = "0.8"
bincode = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
